# claude-skills

./: .gitignore  README.md
.chats/: instructions.md
.claude-plugin/: marketplace.json
ai-image/: README.md  SKILL.md  main.py  pyproject.toml
cel/: SKILL.md
cel/references/: cel_syntax.md  common_patterns.md
cel/templates/: image-registry.yaml  labeling-standards.yaml  resource-requirements.yaml  security-baseline.yaml  security-restricted.yaml
chat-history/: SKILL.md  extract-chats.sh
codex-code-review/: SKILL.md
design-guide/: README.md  SKILL.md  main.py  pyproject.toml
docs/research/: KRO_COMPREHENSIVE_GUIDE.md  pulumi-kubernetes-crd-guide.md
k8s-ack-bridge/: SKILL.md
k8s-ack-bridge/references/: ack-patterns.md  architecture.md  bridge-patterns.md  troubleshooting.md
k8s-ack-bridge/templates/: README.md
k8s-ack-bridge/templates/bridge-operator/: Cargo.toml.template
k8s-ack-bridge/templates/bridge-operator/src/: controller.rs.template  crd.rs.template
kro-rgd/: SKILL.md
kro-rgd/references/: ack_resources.md  kro_schema.md
kro-rgd/templates/: README.md  database-application.ts  fullstack-application.ts  index.ts  multi-environment.ts  web-application.ts
specs/: instructions.md
surrealdb/: SKILL.md
surrealdb/references/: graph_relationships.md  schema_patterns.md  security_auth.md  surrealql_syntax.md
