[project]
name = "design-guide"
version = "0.1.0"
description = "Generate pixel-perfect design guides from website URLs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "playwright>=1.56.0",
    "beautifulsoup4>=4.14.0",
    "cssutils>=2.11.0",
    "pillow>=12.0.0",
]
